# OOPBasics

./: CMakeLists.txt  Docent.cpp  Docent.h
Opdracht1/Classes/: Docent.cpp  Docent.h  Klas.cpp  Klas.h  LesBlok.cpp  LesBlok.h  LesRooster.cpp  LesRooster.h  Lokaal.cpp  Lokaal.h  Vak.cpp  Vak.h
Opdracht2/: CMakeLists.txt  Docent.cpp  Docent.h  Persoon.cpp  Persoon.h  Student.cpp  Student.h  main.cpp
Opdracht3/: CMakeLists.txt  EenEuro.cpp  EenEuro.h  KoffieAutomaat.cpp  KoffieAutomaat.h  KoffieMuntje.cpp  KoffieMuntje.h  Muntgeld.cpp  Muntgeld.h  VijftigCent.cpp  VijftigCent.h  main.cpp
Opdracht4/: IOCommands.cpp  IOCommands.h  JoAnnOutputText.txt  Text1.txt  Text2.txt  main.cpp
Opdracht5/: Bibliotheek.cpp  Bibliotheek.h  Boek.cpp  Boek.h  main.cpp
Opdracht6/: HogesnelheidsTrein.cpp  HogesnelheidsTrein.h  ICE.cpp  ICE.h  Intercity.cpp  Intercity.h  Thalys.cpp  Thalys.h  Trein.cpp  Trein.h  Vervoersmiddel.cpp  Vervoersmiddel.h  main.cpp
