# cmake_minimum_required(VERSION <specify CMake version here>)
project(OOPBasics)

set(CMAKE_CXX_STANDARD 98)

add_executable(OOPBasics main.cpp cmake-build-debug/Rectangle.cpp cmake-build-debug/Rectangle.h Docent.cpp Docent.h cmake-build-debug/Opdracht2/Persoon.cpp cmake-build-debug/Opdracht2/Persoon.h)